@@ -1,6 +1,6 @@
 Name: bsltl
-Version: 1.0.2
-Date: 2016-07-22
+Version: 1.1.0
+Date: 2016-08-22
 Author: Roberto Alves Braga Junior <robertobraga@deg.ufla.br>, Fernando Pujaico Rivera <fernando.pujaico.rivera@gmail.com>, Junio Moreira <juniomoreira@iftm.edu.br>
 Maintainer: Fernando Pujaico Rivera <fernando.pujaico.rivera@gmail.com>
 Title: Biospeckle Laser Tool Library.
