@@ -13,4 +13,4 @@ Numerical
 Quality
  homogeneity satdark sscont
 WithoutTutorial
- datapack_to_bmp
+ datapack_to_bmp select_points thsp_points
