@@ -1,4 +1,12 @@
 ===============================================================================
+bsltl-1.1.0   Release Date: 2016-08-14   Release Manager: Fernando Pujaico R.
+===============================================================================
+** select_points.m and thsp_points.m added.
+   select_points.m: select a set of points and return a matrix with these values.
+   thsp_points.m: return a THSP from a set of points delivered from a matrix with 
+   these values.
+
+===============================================================================
 bsltl-1.0.2   Release Date: 2016-07-14   Release Manager: Fernando Pujaico R.
 ===============================================================================
 ** datapack.m fixed error when the address does not initialize with '~/'.
